--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -52,43 +52,42 @@
                 <div id="modal2" class="modal">
                     <span class="close" onclick="closeModal('modal2')">&times;</span>
                     <div class="modal-content">
-                        <img src="photo2-large1.jpg" alt="Mebel 2 - Zdjęcie 1">
-                        <img src="photo2-large2.jpg" alt="Mebel 2 - Zdjęcie 2">
-                        <img src="photo2-large3.jpg" alt="Mebel 2 - Zdjęcie 3">
+                        <img src="protetyczne2_1.jpg" alt="Mebel 2 - Zdjęcie 1">
+                        <img src="protetyczne2_2.jpg" alt="Mebel 2 - Zdjęcie 2">
+                        <img src="protetyczne2_3.jpg" alt="Mebel 2 - Zdjęcie 3">
                     </div>
                 </div>
 
                 <!-- Mebel 3 -->
                 <div class="furniture-item">
-                    <img src="photo3.jpg" alt="Mebel 3" class="furniture-img" onclick="openModal('modal3')">
-                    <h3>Mebel Protetyczny 3</h3>
-                    <p><strong>Opis:</strong> Ergonomiczny mebel protetyczny zaprojektowany z myślą o komforcie.</p>
-                    <p><strong>Cena netto:</strong> 2500 PLN</p>
-                    <p><strong>Wielkość:</strong> 130x65x80 cm</p>
+                    <img src="protetyczne3.jpg" alt="Mebel 3" class="furniture-img" onclick="openModal('modal3')">
+                    <h3>Biurko Protetyczne v1</h3>
+                    <p><strong>Opis:</strong>Biurko protetyczne wyposażone w instalację elektryczną i powietrzną. Biurko posiada również kanał z przyłączem na wąż odkurzacza, który pasuje do większości kobyłek, takich jak np. Zubler. Istnieje możliwość modyfikacji według indywidualnych potrzeb. Więcej informacji pod numerem telefonu.</p>
+                    <p><strong>Cena netto:</strong> 4300 PLN</p>
+                    <p><strong>Wielkość:</strong> 150x60x88-90 cm</p>
                 </div>
                 <div id="modal3" class="modal">
                     <span class="close" onclick="closeModal('modal3')">&times;</span>
                     <div class="modal-content">
-                        <img src="photo3-large1.jpg" alt="Mebel 3 - Zdjęcie 1">
-                        <img src="photo3-large2.jpg" alt="Mebel 3 - Zdjęcie 2">
-                        <img src="photo3-large3.jpg" alt="Mebel 3 - Zdjęcie 3">
+                        <img src="protetyczne3_1.jpg" alt="Mebel 3 - Zdjęcie 1">
+                        <img src="protetyczne3_2.jpg" alt="Mebel 3 - Zdjęcie 2">
+                        <img src="protetyczne3_3.jpg" alt="Mebel 3 - Zdjęcie 3">
                     </div>
                 </div>
 
                 <!-- Mebel 4 -->
                 <div class="furniture-item">
-                    <img src="photo4.jpg" alt="Mebel 4" class="furniture-img" onclick="openModal('modal4')">
-                    <h3>Mebel Protetyczny 4</h3>
-                    <p><strong>Opis:</strong> Wytrzymały mebel protetyczny stworzony z wysokiej jakości materiałów.</p>
-                    <p><strong>Cena netto:</strong> 1800 PLN</p>
-                    <p><strong>Wielkość:</strong> 110x55x75 cm</p>
+                    <img src="protetyczne4.jpg" alt="Mebel 4" class="furniture-img" onclick="openModal('modal4')">
+                    <h3>Biurko Protetyczne v2</h3>
+                    <p><strong>Opis:</strong>Biurko protetyczne wyposażone jest w dwie dmuchawki sprężonego powietrza oraz instalację elektryczną podblatową z trzema gniazdami na każde stanowisko. Posiada dwa kanały pod kobyłkę, półkę na prace oraz dwie maty robocze. Istnieje możliwość dokupienia kobyłek, zmiany wymiarów i kolorystyki, a także instalacji gazowej z podwójnym zaworem. Więcej informacji pod numerem telefonu.</p>
+                    <p><strong>Cena netto:</strong> 5900 PLN</p>
+                    <p><strong>Wielkość:</strong> 270x60x87-90 cm</p>
                 </div>
                 <div id="modal4" class="modal">
                     <span class="close" onclick="closeModal('modal4')">&times;</span>
                     <div class="modal-content">
-                        <img src="photo4-large1.jpg" alt="Mebel 4 - Zdjęcie 1">
-                        <img src="photo4-large2.jpg" alt="Mebel 4 - Zdjęcie 2">
-                        <img src="photo4-large3.jpg" alt="Mebel 4 - Zdjęcie 3">
+                        <img src="protetyczne4_1.jpg" alt="Mebel 4 - Zdjęcie 1">
+                        <img src="protetyczne4_2.jpg" alt="Mebel 4 - Zdjęcie 2">
                     </div>
                 </div>
 
