--- a/kontakt.html
+++ b/kontakt.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="logo.png" type="image/png">
     <title>Kontakt - R.S. Labor meble</title>
     <link rel="stylesheet" href="styles2.css">
 </head>
