--- a/galeria.html
+++ b/galeria.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="logo.png" type="image/png">
     <title>Galeria - R.S. Labor meble</title>
     <link rel="stylesheet" href="styles3.css">
 </head>
