--- a/galeria.html
+++ b/galeria.html
@@ -25,12 +25,12 @@
         <section class="gallery">
             <h2>Nasza Galeria</h2>
             <div class="gallery-grid">
-                <img src="photo1.jpg" alt="Zdjęcie 1">
-                <img src="photo2.jpg" alt="Zdjęcie 2">
-                <img src="photo3.jpg" alt="Zdjęcie 3">
-                <img src="photo4.jpg" alt="Zdjęcie 4">
-                <img src="photo5.jpg" alt="Zdjęcie 5">
-                <img src="photo6.jpg" alt="Zdjęcie 6">
+                <img src="zdjecie1.jpg" alt="Zdjęcie 1">
+                <img src="zdjecie2.jpg" alt="Zdjęcie 2">
+                <img src="zdjecie3.jpg" alt="Zdjęcie 3">
+                <img src="zdjecie4.jpg" alt="Zdjęcie 4">
+                <img src="zdjecie5.jpg" alt="Zdjęcie 5">
+                <img src="zdjecie6.jpg" alt="Zdjęcie 6">
                 <img src="photo7.jpg" alt="Zdjęcie 7">
                 <img src="photo8.jpg" alt="Zdjęcie 8">
             </div>
