--- a/urzadzenia_protetyczne.html
+++ b/urzadzenia_protetyczne.html
@@ -26,18 +26,17 @@
             <h2>Nasza Oferta Urządzenia Protetyczne</h2>
             <div class="furniture-grid">
                 <div class="furniture-item">
-                    <img src="photo1.jpg" alt="Mebel 1" class="furniture-img" onclick="openModal('modal1')">
+                    <img src="urzadzenia_protetyczne1.jpg" alt="Mebel 1" class="furniture-img" onclick="openModal('modal1')">
                     <h3>Mebel Protetyczny 1</h3>
-                    <p><strong>Opis:</strong> Wysokiej jakości mebel protetyczny, idealny do zastosowań specjalistycznych.</p>
-                    <p><strong>Cena netto:</strong> 2000 PLN</p>
-                    <p><strong>Wielkość:</strong> 120x60x75 cm</p>
+                    <p><strong>Opis:</strong> Kobyłka z szybką biała lub czarna. Na zamówienie dostępne są inne kolory</p>
+                    <p><strong>Cena netto:</strong> 380.00 PLN</p>
                 </div>
                 <div id="modal1" class="modal">
                     <span class="close" onclick="closeModal('modal1')">&times;</span>
                     <div class="modal-content">
-                        <img src="photo1" alt="Mebel 1 - Zdjęcie 1">
-                        <img src="photo1.jpg" alt="Mebel 1 - Zdjęcie 2">
-                        <img src="photo1.jpg" alt="Mebel 1 - Zdjęcie 3">
+                        <img src="urzadzenia_protetyczne1_1.jpg" alt="Mebel 1 - Zdjęcie 1">
+                        <img src="urzadzenia_protetyczne1_2.jpg" alt="Mebel 1 - Zdjęcie 2">
+                        <img src="urzadzenia_protetyczne1_3.jpg" alt="Mebel 1 - Zdjęcie 3">
                     </div>
                 </div>
 
