--- a/urzadzenia_protetyczne.html
+++ b/urzadzenia_protetyczne.html
@@ -41,18 +41,17 @@
                 </div>
 
                 <div class="furniture-item">
-                    <img src="photo1.jpg" alt="Mebel 2" class="furniture-img" onclick="openModal('modal2')">
-                    <h3>Mebel Protetyczny 2</h3>
-                    <p><strong>Opis:</strong> Nowoczesny mebel protetyczny, który łączy funkcjonalność z estetyką.</p>
-                    <p><strong>Cena netto:</strong> 1500 PLN</p>
-                    <p><strong>Wielkość:</strong> 100x50x70 cm</p>
+                    <img src="urzadzenie_protetyczne2.jpg" alt="Mebel 2" class="furniture-img" onclick="openModal('modal2')">
+                    <h3>Kanał Kobyłki</h3>
+                    <p><strong>Opis:</strong> Kanał kobyłki jest kompatybilny z kobyłkami firmy Zubler czy Wassermann</p>
+                    <p><strong>Cena netto:</strong> 185 PLN</p>
                 </div>
                 <div id="modal2" class="modal">
                     <span class="close" onclick="closeModal('modal2')">&times;</span>
                     <div class="modal-content">
-                        <img src="photo1.jpg" alt="Mebel 2 - Zdjęcie 1">
-                        <img src="photo1.jpg" alt="Mebel 2 - Zdjęcie 2">
-                        <img src="photo1.jpg" alt="Mebel 2 - Zdjęcie 3">
+                        <img src="urzadzenie_protetyczne2_1.jpg" alt="Mebel 2 - Zdjęcie 1">
+                        <img src="urzadzenie_protetyczne2_2.jpg" alt="Mebel 2 - Zdjęcie 2">
+                        <img src="urzadzenie_protetyczne2_3.jpg" alt="Mebel 2 - Zdjęcie 3">
                     </div>
                 </div>
 
