--- a/urzadzenia_protetyczne.html
+++ b/urzadzenia_protetyczne.html
@@ -156,6 +156,6 @@
     <footer>
         <p>&copy; 2024 R.S. Labor meble. Wszelkie prawa zastrzeżone.</p>
     </footer>
-    <script src="scripts.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
