--- a/urzadzenia_protetyczne.html
+++ b/urzadzenia_protetyczne.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="furniture-item">
-                    <img src="urzadzenie_protetyczne2.jpg" alt="Mebel 2" class="furniture-img" onclick="openModal('modal2')">
+                    <img src="urzadzenia_protetyczne2.jpg" alt="Mebel 2" class="furniture-img" onclick="openModal('modal2')">
                     <h3>Kanał Kobyłki</h3>
                     <p><strong>Opis:</strong> Kanał kobyłki jest kompatybilny z kobyłkami firmy Zubler czy Wassermann</p>
                     <p><strong>Cena netto:</strong> 185 PLN</p>
@@ -49,9 +49,9 @@
                 <div id="modal2" class="modal">
                     <span class="close" onclick="closeModal('modal2')">&times;</span>
                     <div class="modal-content">
-                        <img src="urzadzenie_protetyczne2_1.jpg" alt="Mebel 2 - Zdjęcie 1">
-                        <img src="urzadzenie_protetyczne2_2.jpg" alt="Mebel 2 - Zdjęcie 2">
-                        <img src="urzadzenie_protetyczne2_3.jpg" alt="Mebel 2 - Zdjęcie 3">
+                        <img src="urzadzenia_protetyczne2_1.jpg" alt="Mebel 2 - Zdjęcie 1">
+                        <img src="urzadzenia_protetyczne2_2.jpg" alt="Mebel 2 - Zdjęcie 2">
+                        <img src="urzadzenia_protetyczne2_3.jpg" alt="Mebel 2 - Zdjęcie 3">
                     </div>
                 </div>
 
