--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -93,11 +93,11 @@
 
                 <!-- Mebel 5 -->
                 <div class="furniture-item">
-                    <img src="photo5.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal5')">
-                    <h3>Mebel Protetyczny 5</h3>
-                    <p><strong>Opis:</strong> Innowacyjny mebel protetyczny, zapewniający komfort i funkcjonalność.</p>
-                    <p><strong>Cena netto:</strong> 2200 PLN</p>
-                    <p><strong>Wielkość:</strong> 125x60x80 cm</p>
+                    <img src="meble_protetyczne4.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal5')">
+                    <h3>Biurko ENS - eko</h3>
+                    <p><strong>Opis:</strong> Urządzenie składa się z wytrzymałej konstrukcji aluminiowej, wyposażonej w praktyczne elementy instalacyjne. Zawiera instalację elektryczną z trzema gniazdami umieszczonymi pod blatem, instalację powietrzną z dmuchawką oraz matę roboczą, zapewniającą wygodę użytkowania. Szuflady zostały wyposażone w prowadnice z systemem cichego domykania. Opcjonalnie można zainstalować instalację gazową, dodatkową lampę, kobytkę oraz zmienić kolor urządzenia wedle preferencji użytkownika.</p>
+                    <p><strong>Cena netto:</strong> 4000 PLN</p>
+                    <p><strong>Wielkość:</strong> 110x60x89 cm</p>
                 </div>
                 <div id="modal5" class="modal">
                     <span class="close" onclick="closeModal('modal5')">&times;</span>
