--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -37,8 +37,8 @@
                     <span class="close" onclick="closeModal('modal1')">&times;</span>
                     <div class="modal-content">
                         <img src="protetyczne1_1.jpg" alt="Mebel 1 - Zdjęcie 1">
-                        <img src="meble_protetyczne1_2" alt="Mebel 1 - Zdjęcie 2">
-                        <img src="meble_protetyczne1_3" alt="Mebel 1 - Zdjęcie 3">
+                        <img src="meble_protetyczne1_2.jpg" alt="Mebel 1 - Zdjęcie 2">
+                        <img src="meble_protetyczne1_3.jpg" alt="Mebel 1 - Zdjęcie 3">
                     </div>
                 </div>
 
