--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -89,7 +89,21 @@
                         <img src="meble_protetyczne4.jpg" alt="Mebel 6 - Zdjęcie 1">
                     </div>
                 </div>
-
+                    <div class="furniture-item">
+                    <img src="meble_protetyczne5.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal5')">
+                    <h3>Biurko ANS - trzystanowiskowe</h3>
+                    <p><strong>Opis:</strong>Biurko trzystanowiskowe to funkcjonalne rozwiązanie o wymiarach: szerokość x głębokość x wysokość, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
+                    <p><strong>Cena netto:</strong> 11500 PLN</p>
+                    <p><strong>Wielkość:</strong> Brak informacji </p>
+                </div>
+                <div id="modal5" class="modal">
+                    <span class="close" onclick="closeModal('modal5')">&times;</span>
+                    <div class="modal-content">
+                        <img src="meble_protetyczne5_1.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne5_2.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne5_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                    </div>
+                </div>
                
             </div>
         </section>
