--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -92,7 +92,7 @@
                     <div class="furniture-item">
                     <img src="meble_protetyczne5.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal5')">
                     <h3>Biurko ANS - trzystanowiskowe</h3>
-                    <p><strong>Opis:</strong>Biurko trzystanowiskowe to funkcjonalne rozwiązanie o wymiarach: szerokość x głębokość x wysokość, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
+                    <p><strong>Opis:</strong>Biurko trzystanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
                     <p><strong>Cena netto:</strong> 11500 PLN</p>
                     <p><strong>Wielkość:</strong> Brak informacji </p>
                 </div>
