--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -95,12 +95,26 @@
                     <p><strong>Cena netto:</strong> 11500 PLN</p>
                     <p><strong>Wielkość:</strong> Brak informacji </p>
                 </div>
-                <div id="modal5" class="modal">
-                    <span class="close" onclick="closeModal('modal5')">&times;</span>
+                
+                <div id="modal6" class="modal">
+                    <span class="close" onclick="closeModal('modal6')">&times;</span>
                     <div class="modal-content">
                         <img src="meble_protetyczne5_1.jpg" alt="Mebel 6 - Zdjęcie 1">
                         <img src="meble_protetyczne5_2.jpg" alt="Mebel 6 - Zdjęcie 1">
                         <img src="meble_protetyczne5_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                    </div>
+                </div>
+                <div class="furniture-item">
+                    <img src="meble_protetyczne6.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal6')">
+                    <h3>Biurko ANS - jednostanowiskowe</h3>
+                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
+                    <p><strong>Cena netto:</strong> 2900 PLN</p>
+                    <p><strong>Wielkość:</strong> 120x60x89 cm </p>
+                </div>
+                <div id="modal6" class="modal">
+                    <span class="close" onclick="closeModal('modal6')">&times;</span>
+                    <div class="modal-content">
+                        <img src="meble_protetyczne6_1.jpg" alt="Mebel 6 - Zdjęcie 1">
                     </div>
                 </div>
                
