--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -62,16 +62,17 @@
                 <!-- Mebel 3 -->
                 <div class="furniture-item">
                     <img src="protetyczne3.jpg" alt="Mebel 3" class="furniture-img" onclick="openModal('modal3')">
-                    <h3>Biurko Protetyczne v1</h3>
+                    <h3>Biurko ENS 2</h3>
                     <p><strong>Opis:</strong>Biurko protetyczne wyposażone w instalację elektryczną i powietrzną. Biurko posiada również kanał z przyłączem na wąż odkurzacza, który pasuje do większości kobyłek, takich jak np. Zubler. Istnieje możliwość modyfikacji według indywidualnych potrzeb. Więcej informacji pod numerem telefonu.</p>
-                    <p><strong>Cena netto:</strong> 4300 PLN</p>
-                    <p><strong>Wielkość:</strong> 150x60x88-90 cm</p>
+                    <p><strong>Cena netto:</strong> 5400 PLN</p>
+                    <p><strong>Wielkość:</strong> 210x60x89 cm</p>
                 </div>
                 <div id="modal3" class="modal">
                     <span class="close" onclick="closeModal('modal3')">&times;</span>
                     <div class="modal-content">
                         <img src="protetyczne3_1.jpg" alt="Mebel 3 - Zdjęcie 1">
-                        <img src="protetyczne3_2.jpg" alt="Mebel 3 - Zdjęcie 2">
+                        <img src="meble_protetyczne3_2.jpg" alt="Mebel 3 - Zdjęcie 2">
+                        <img src="meble_protetyczne3_3.jpg" alt="Mebel 3 - Zdjęcie 2">
                     </div>
                 </div>
 
@@ -115,6 +116,21 @@
                     <span class="close" onclick="closeModal('modal6')">&times;</span>
                     <div class="modal-content">
                         <img src="meble_protetyczne6_1.jpg" alt="Mebel 6 - Zdjęcie 1">
+                    </div>
+                </div>
+                    <div class="furniture-item">
+                    <img src="meble_protetyczne7.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal7')">
+                    <h3>Biurko ENS 2</h3>
+                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
+                    <p><strong>Cena netto:</strong> 5400 PLN</p>
+                    <p><strong>Wielkość:</strong> 210x60x89 cm </p>
+                </div>
+                <div id="modal6" class="modal">
+                    <span class="close" onclick="closeModal('modal7')">&times;</span>
+                    <div class="modal-content">
+                        <img src="meble_protetyczne7_1.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne7_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne7_3.jpg" alt="Mebel 6 - Zdjęcie 1">
                     </div>
                 </div>
                
