--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -45,18 +45,10 @@
                 <!-- Mebel 2 -->
                 <div class="furniture-item">
                     <img src="protetyczne2.jpg" alt="Mebel 2" class="furniture-img" onclick="openModal('modal2')">
-                    <h3>Biurko Protetyczne Kavo</h3>
-                    <p><strong>Opis:</strong> Dwustanowiskowe biurko protetyczne Kavo. Istnieje możliwość zamontowania kompletnego wyciągu Kavo, podłokietników, lampy oraz innych elementów według uznania klienta. Więcej informacji można uzyskać pod numerem telefonu.</p>
-                    <p><strong>Cena netto:</strong> 4900 PLN</p>
-                    <p><strong>Wielkość:</strong> Brak opisu </p>
-                </div>
-                <div id="modal2" class="modal">
-                    <span class="close" onclick="closeModal('modal2')">&times;</span>
-                    <div class="modal-content">
-                        <img src="protetyczne2_1.jpg" alt="Mebel 2 - Zdjęcie 1">
-                        <img src="protetyczne2_2.jpg" alt="Mebel 2 - Zdjęcie 2">
-                        <img src="protetyczne2_3.jpg" alt="Mebel 2 - Zdjęcie 3">
-                    </div>
+                    <h3>Biurko Protetyczne ANS plus</h3>
+                    <p><strong>Opis:Biurko jednostanowiskowe ANS plus to nowoczesne rozwiązanie z aluminiową konstrukcją, zapewniające komfortowe warunki pracy. Wyposażone jest w instalację elektryczną z trzema gniazdami umieszczonymi pod blatem, instalację powietrzną z dmuchawką oraz matę roboczą. Posiada również prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa, wyciąg pyłu oraz możliwość zmiany koloru mebla.</strong></p>
+                    <p><strong>Cena netto:</strong> 3600 PLN</p>
+                    <p><strong>Wielkość:</strong> 150x60x89 cm </p>
                 </div>
 
                 <!-- Mebel 3 -->
