--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -44,7 +44,7 @@
 
                 <!-- Mebel 2 -->
                 <div class="furniture-item">
-                    <img src="protetyczne2.jpg" alt="Mebel 2" class="furniture-img" onclick="openModal('modal2')">
+                    <img src="meble_protetyczne2.jpg" alt="Mebel 2" class="furniture-img" onclick="openModal('modal2')">
                     <h3>Biurko Protetyczne ANS plus</h3>
                     <p><strong>Opis:Biurko jednostanowiskowe ANS plus to nowoczesne rozwiązanie z aluminiową konstrukcją, zapewniające komfortowe warunki pracy. Wyposażone jest w instalację elektryczną z trzema gniazdami umieszczonymi pod blatem, instalację powietrzną z dmuchawką oraz matę roboczą. Posiada również prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa, wyciąg pyłu oraz możliwość zmiany koloru mebla.</strong></p>
                     <p><strong>Cena netto:</strong> 3600 PLN</p>
