--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -50,6 +50,12 @@
                     <p><strong>Cena netto:</strong> 3600 PLN</p>
                     <p><strong>Wielkość:</strong> 150x60x89 cm </p>
                 </div>
+                 <div id="modal2" class="modal">
+                    <span class="close" onclick="closeModal('modal2')">&times;</span>
+                    <div class="modal-content">
+                        <img src="meble_protetyczne2.jpg" alt="Mebel 3 - Zdjęcie 1">
+                    </div>
+                </div>
 
                 <!-- Mebel 3 -->
                 <div class="furniture-item">
