--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -123,7 +123,7 @@
                     <p><strong>Cena netto:</strong> 5400 PLN</p>
                     <p><strong>Wielkość:</strong> 210x60x89 cm </p>
                 </div>
-                <div id="modal6" class="modal">
+                <div id="modal7" class="modal">
                     <span class="close" onclick="closeModal('modal7')">&times;</span>
                     <div class="modal-content">
                         <img src="meble_protetyczne7_1.jpg" alt="Mebel 6 - Zdjęcie 1">
@@ -131,7 +131,82 @@
                         <img src="meble_protetyczne7_3.jpg" alt="Mebel 6 - Zdjęcie 1">
                     </div>
                 </div>
-               
+                
+                 <div class="furniture-item">
+                    <img src="meble_protetyczne8.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal8')">
+                    <h3>Biurko ENS 2</h3>
+                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
+                    <p><strong>Cena netto:</strong> 5400 PLN</p>
+                    <p><strong>Wielkość:</strong> 210x60x89 cm </p>
+                </div>
+                <div id="modal8" class="modal">
+                    <span class="close" onclick="closeModal('modal8')">&times;</span>
+                    <div class="modal-content">
+                        <img src="meble_protetyczne8_1.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne8_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne8_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                    </div>
+                </div>
+                 <div class="furniture-item">
+                    <img src="meble_protetyczne9.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal9')">
+                    <h3>Biurko ENS 2</h3>
+                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
+                    <p><strong>Cena netto:</strong> 5400 PLN</p>
+                    <p><strong>Wielkość:</strong> 210x60x89 cm </p>
+                </div>
+                <div id="modal9" class="modal">
+                    <span class="close" onclick="closeModal('modal9')">&times;</span>
+                    <div class="modal-content">
+                        <img src="meble_protetyczne9_1.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne9_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne9_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                    </div>
+                </div>
+                <div class="furniture-item">
+                    <img src="meble_protetyczne10.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal10')">
+                    <h3>Biurko ENS 2</h3>
+                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
+                    <p><strong>Cena netto:</strong> 5400 PLN</p>
+                    <p><strong>Wielkość:</strong> 210x60x89 cm </p>
+                </div>
+                <div id="modal10" class="modal">
+                    <span class="close" onclick="closeModal('modal10')">&times;</span>
+                    <div class="modal-content">
+                        <img src="meble_protetyczne10_1.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne10_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne10_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                    </div>
+                </div>
+                 <div class="furniture-item">
+                    <img src="meble_protetyczne11.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal11')">
+                    <h3>Biurko ENS 2</h3>
+                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
+                    <p><strong>Cena netto:</strong> 5400 PLN</p>
+                    <p><strong>Wielkość:</strong> 210x60x89 cm </p>
+                </div>
+                <div id="modal11" class="modal">
+                    <span class="close" onclick="closeModal('modal11')">&times;</span>
+                    <div class="modal-content">
+                        <img src="meble_protetyczne11_1.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne11_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne11_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                    </div>
+                </div>
+                 <div class="furniture-item">
+                    <img src="meble_protetyczne12.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal12')">
+                    <h3>Biurko ENS 2</h3>
+                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
+                    <p><strong>Cena netto:</strong> 5400 PLN</p>
+                    <p><strong>Wielkość:</strong> 210x60x89 cm </p>
+                </div>
+                <div id="modal12" class="modal">
+                    <span class="close" onclick="closeModal('modal12')">&times;</span>
+                    <div class="modal-content">
+                        <img src="meble_protetyczne12_1.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne12_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne12_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
