--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -118,17 +118,15 @@
                 </div>
                     <div class="furniture-item">
                     <img src="meble_protetyczne7.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal7')">
-                    <h3>Biurko ENS 2</h3>
-                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
-                    <p><strong>Cena netto:</strong> 5400 PLN</p>
-                    <p><strong>Wielkość:</strong> 210x60x89 cm </p>
+                    <h3>Biurko Wielostanowiskowe</h3>
+                    <p><strong>Opis:</strong>Biurko wielostanowiskowe to funkcjonalne rozwiązanie, idealne do pracy w zespole. Wyposażone jest w instalację elektryczną z trzema gniazdami umieszczonymi pod blatem, matę roboczą oraz prowadnice szuflad z cichym domykiem. Wśród opcji dodatkowych znajdują się lampa, kobylka (podpórka), wyciąg pyłu oraz możliwość zmiany koloru mebla.</p>
+                    <p><strong>Cena netto:</strong> 14500 PLN</p>
+                    <p><strong>Wielkość:</strong> 245x125x89 cm </p>
                 </div>
                 <div id="modal7" class="modal">
                     <span class="close" onclick="closeModal('modal7')">&times;</span>
                     <div class="modal-content">
-                        <img src="meble_protetyczne7_1.jpg" alt="Mebel 6 - Zdjęcie 1">
-                        <img src="meble_protetyczne7_3.jpg" alt="Mebel 6 - Zdjęcie 1">
-                        <img src="meble_protetyczne7_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne7.jpg" alt="Mebel 6 - Zdjęcie 1">
                     </div>
                 </div>
                 
