--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -132,25 +132,24 @@
                 
                  <div class="furniture-item">
                     <img src="meble_protetyczne8.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal8')">
-                    <h3>Biurko ENS 2</h3>
-                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
-                    <p><strong>Cena netto:</strong> 5400 PLN</p>
-                    <p><strong>Wielkość:</strong> 210x60x89 cm </p>
+                    <h3>Blok wielostanowiskowy</h3>
+                    <p><strong>Opis:</strong>Biurko blok wielostanowiskowy to solidne rozwiązanie, zapewniające wygodę pracy na wielu stanowiskach. Wyposażone jest w instalację elektryczną z trzema gniazdami na każde stanowisko, instalację powietrzną z dmuchawką, matę roboczą oraz prowadnice szuflad z mechanizmem cichego domyku. Dodatkowo dostępne są opcje takie jak instalacja gazowa, kobyłka (podpórka), lampa, wyciąg pyłu oraz możliwość zmiany koloru mebla.</p>
+                    <p><strong>Cena netto:</strong> 3000 PLN</p>
+                    <p><strong>Wielkość:</strong> 310x120x89 cm </p>
                 </div>
                 <div id="modal8" class="modal">
                     <span class="close" onclick="closeModal('modal8')">&times;</span>
                     <div class="modal-content">
-                        <img src="meble_protetyczne8_1.jpg" alt="Mebel 6 - Zdjęcie 1">
-                        <img src="meble_protetyczne8_3.jpg" alt="Mebel 6 - Zdjęcie 1">
-                        <img src="meble_protetyczne8_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne8.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne8_2.jpg" alt="Mebel 6 - Zdjęcie 1">
                     </div>
                 </div>
                  <div class="furniture-item">
                     <img src="meble_protetyczne9.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal9')">
-                    <h3>Biurko ENS 2</h3>
-                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
-                    <p><strong>Cena netto:</strong> 5400 PLN</p>
-                    <p><strong>Wielkość:</strong> 210x60x89 cm </p>
+                    <h3>Blok czterostanowiskowy</h3>
+                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to praktyczne rozwiązanie, oferujące komfortowe miejsce pracy. Wyposażone jest w instalację elektryczną z trzema gniazdami umieszczonymi pod blatem oraz prowadnice szuflad z mechanizmem cichego domyku. Dodatkowo dostępne są opcje takie jak lampa oraz możliwość zmiany koloru mebla.</p>
+                    <p><strong>Cena netto:</strong> 12500 PLN</p>
+                    <p><strong>Wielkość:</strong> 165x165x89 cm </p>
                 </div>
                 <div id="modal9" class="modal">
                     <span class="close" onclick="closeModal('modal9')">&times;</span>
@@ -162,49 +161,32 @@
                 </div>
                 <div class="furniture-item">
                     <img src="meble_protetyczne10.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal10')">
-                    <h3>Biurko ENS 2</h3>
-                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
-                    <p><strong>Cena netto:</strong> 5400 PLN</p>
-                    <p><strong>Wielkość:</strong> 210x60x89 cm </p>
+                    <h3>Blok czterostanowiskowy pod wyciąg KAVO</h3>
+                    <p><strong>Opis:</strong>Biurko blok czterostanowiskowe zaprojektowane pod wyciąg KAVO o wymiarach 165 cm x 165 cm x 89 cm to profesjonalne rozwiązanie zapewniające ergonomię i wygodę pracy. Wyposażone jest w instalację elektryczną z gniazdem pod blatem, instalację powietrzną z dmuchawkami, matę roboczą oraz prowadnice szuflad z cichym domykiem. W opcjach dodatkowych dostępne są instalacja gazowa, lampa, wyciąg pyłu oraz możliwość zmiany koloru mebla, co pozwala na pełne dostosowanie stanowiska do potrzeb użytkownika.</p>
+                    <p><strong>Cena netto:</strong> 13500 PLN</p>
+                    <p><strong>Wielkość:</strong> 165x165x89 cm </p>
                 </div>
                 <div id="modal10" class="modal">
                     <span class="close" onclick="closeModal('modal10')">&times;</span>
                     <div class="modal-content">
-                        <img src="meble_protetyczne10_1.jpg" alt="Mebel 6 - Zdjęcie 1">
-                        <img src="meble_protetyczne10_3.jpg" alt="Mebel 6 - Zdjęcie 1">
-                        <img src="meble_protetyczne10_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne10.jpg" alt="Mebel 6 - Zdjęcie 1">
                     </div>
                 </div>
                  <div class="furniture-item">
                     <img src="meble_protetyczne11.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal11')">
-                    <h3>Biurko ENS 2</h3>
-                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
-                    <p><strong>Cena netto:</strong> 5400 PLN</p>
-                    <p><strong>Wielkość:</strong> 210x60x89 cm </p>
+                    <h3>Blok czterostanowiskowy</h3>
+                    <p><strong>Opis:</strong>Biurko blok czterostanowiskowe o wymiarach 165 cm x 165 cm x 89 cm to ergonomiczne rozwiązanie, idealne do pracy zespołowej. Wyposażone jest w instalację elektryczną pod blatem, instalację powietrzną z dmuchawkami, matę roboczą oraz prowadnice szuflad z cichym domykiem. W opcjach dodatkowych dostępne są instalacja gazowa, kobyłka (podpórka), lampa, wyciąg pyłu oraz możliwość zmiany koloru, co pozwala na dostosowanie biurka do indywidualnych potrzeb.</p>
+                    <p><strong>Cena netto:</strong> 13500 PLN</p>
+                    <p><strong>Wielkość:</strong> 165x165x89 cm </p>
                 </div>
                 <div id="modal11" class="modal">
                     <span class="close" onclick="closeModal('modal11')">&times;</span>
                     <div class="modal-content">
-                        <img src="meble_protetyczne11_1.jpg" alt="Mebel 6 - Zdjęcie 1">
-                        <img src="meble_protetyczne11_3.jpg" alt="Mebel 6 - Zdjęcie 1">
-                        <img src="meble_protetyczne11_3.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne11.jpg" alt="Mebel 6 - Zdjęcie 1">
+                        <img src="meble_protetyczne11_2.jpg" alt="Mebel 6 - Zdjęcie 1">
                     </div>
                 </div>
-                 <div class="furniture-item">
-                    <img src="meble_protetyczne12.jpg" alt="Mebel 5" class="furniture-img" onclick="openModal('modal12')">
-                    <h3>Biurko ENS 2</h3>
-                    <p><strong>Opis:</strong>Biurko jednostanowiskowe to funkcjonalne rozwiązanie, zaprojektowane z myślą o wygodzie pracy. Wyposażone jest w instalację elektryczną z trzema zestawami po trzy gniazda umieszczonymi pod blatem oraz instalację powietrzną z dmuchawkami. Posiada matę roboczą i prowadnice szuflad z mechanizmem cichego domyku. W ramach opcji dodatkowych dostępne są instalacja gazowa, kobylka (podpórka), lampa oraz możliwość zmiany koloru mebla.</p>
-                    <p><strong>Cena netto:</strong> 5400 PLN</p>
-                    <p><strong>Wielkość:</strong> 210x60x89 cm </p>
-                </div>
-                <div id="modal12" class="modal">
-                    <span class="close" onclick="closeModal('modal12')">&times;</span>
-                    <div class="modal-content">
-                        <img src="meble_protetyczne12_1.jpg" alt="Mebel 6 - Zdjęcie 1">
-                        <img src="meble_protetyczne12_3.jpg" alt="Mebel 6 - Zdjęcie 1">
-                        <img src="meble_protetyczne12_3.jpg" alt="Mebel 6 - Zdjęcie 1">
-                    </div>
-                </div>
+                
             </div>
         </section>
     </main>
