--- a/meble_stomatologiczne.html
+++ b/meble_stomatologiczne.html
@@ -46,6 +46,6 @@
     <footer>
         <p>&copy; 2024 R.S. Labor meble. Wszelkie prawa zastrzeżone.</p>
     </footer>
-    <script src="scripts.js"></script>
+    <script src="scripts2.js"></script>
 </body>
 </html>
