--- a/galeria.html
+++ b/galeria.html
@@ -27,12 +27,14 @@
             <div class="gallery-grid">
                 <img src="zdjecie1.jpg" alt="Zdjęcie 1">
                 <img src="zdjecie2.jpg" alt="Zdjęcie 2">
-                <img src="zdjecie3.jpg" alt="Zdjęcie 3">
+                <img src="urzadzenia_protetyczne1_1.jpg" alt="Zdjęcie 3">
                 <img src="zdjecie4.jpg" alt="Zdjęcie 4">
                 <img src="zdjecie5.jpg" alt="Zdjęcie 5">
                 <img src="zdjecie6.jpg" alt="Zdjęcie 6">
-                <img src="photo7.jpg" alt="Zdjęcie 7">
-                <img src="photo8.jpg" alt="Zdjęcie 8">
+                <img src="urzadzenia_protetyczne1.jpg" alt="Zdjęcie 7">
+                <img src="meble_protetyczne8.jpg" alt="Zdjęcie 8">
+                <img src="meble_protetyczne9_2.jpg" alt="Zdjęcie 7">
+                <img src="zdjecie3.jpg" alt="Zdjęcie 7">
             </div>
         </section>
     </main>
