--- a/komis.html
+++ b/komis.html
@@ -30,6 +30,6 @@
     <footer>
         <p>&copy; 2024 R.S. Labor meble. Wszelkie prawa zastrzeżone.</p>
     </footer>
-    <script src="scripts2.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
