--- a/galeria.html
+++ b/galeria.html
@@ -31,7 +31,7 @@
                 <img src="zdjecie4.jpg" alt="Zdjęcie 4">
                 <img src="zdjecie5.jpg" alt="Zdjęcie 5">
                 <img src="zdjecie6.jpg" alt="Zdjęcie 6">
-                <img src="urzadzenia_protetyczne1.jpg" alt="Zdjęcie 7">
+                <img src="meble_protetyczne7" alt="Zdjęcie 7">
                 <img src="meble_protetyczne8.jpg" alt="Zdjęcie 8">
                 <img src="meble_protetyczne9_2.jpg" alt="Zdjęcie 7">
                 <img src="zdjecie3.jpg" alt="Zdjęcie 7">
