--- a/galeria.html
+++ b/galeria.html
@@ -25,16 +25,36 @@
         <section class="gallery">
             <h2>Nasza Galeria</h2>
             <div class="gallery-grid">
-                <img src="zdjecie1.jpg" alt="Zdjęcie 1">
-                <img src="zdjecie2.jpg" alt="Zdjęcie 2">
-                <img src="urzadzenia_protetyczne1_1.jpg" alt="Zdjęcie 3">
-                <img src="zdjecie4.jpg" alt="Zdjęcie 4">
-                <img src="zdjecie5.jpg" alt="Zdjęcie 5">
-                <img src="zdjecie6.jpg" alt="Zdjęcie 6">
-                <img src="meble_protetyczne7.jpg" alt="Zdjęcie 7">
-                <img src="meble_protetyczne8.jpg" alt="Zdjęcie 8">
-                <img src="meble_protetyczne9_2.jpg" alt="Zdjęcie 7">
-                <img src="zdjecie3.jpg" alt="Zdjęcie 7">
+                <div class="gallery-item">
+                    <img src="zdjecie1.jpg" alt="Zdjęcie 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="zdjecie2.jpg" alt="Zdjęcie 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="urzadzenia_protetyczne1_1.jpg" alt="Zdjęcie 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="zdjecie4.jpg" alt="Zdjęcie 4">
+                </div>
+                <div class="gallery-item">
+                    <img src="zdjecie5.jpg" alt="Zdjęcie 5">
+                </div>
+                <div class="gallery-item">
+                    <img src="zdjecie6.jpg" alt="Zdjęcie 6">
+                </div>
+                <div class="gallery-item">
+                    <img src="meble_protetyczne7.jpg" alt="Zdjęcie 7">
+                </div>
+                <div class="gallery-item">
+                    <img src="meble_protetyczne8.jpg" alt="Zdjęcie 8">
+                </div>
+                <div class="gallery-item">
+                    <img src="meble_protetyczne9_2.jpg" alt="Zdjęcie 9">
+                </div>
+                <div class="gallery-item">
+                    <img src="zdjecie3.jpg" alt="Zdjęcie 10">
+                </div>
             </div>
         </section>
     </main>
